Stop dropdown caret being truncated in `.card-actions`

--- a/assets/scss/material/_card.scss
+++ b/assets/scss/material/_card.scss
@@ -61,6 +61,10 @@
     padding-right: $card-action-inner-spacer-x;
     padding-left: $card-action-inner-spacer-x;
   }
+
+  .dropdown-toggle::after {
+    margin-right: 0;
+  }
 }
 
 // Body
